# portray

./: .bumpversion.cfg  .cruft.json  .gitignore  .pre-commit-config.yaml  .windsurfrules  RULES.md  firebender.json  mkdocs._yaml  pyproject.toml
.github/: build-test-publish.yml  mkdocs-gh-pages.yml
.github/ISSUE_TEMPLATE/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
Makefile.d/: terragrunt-options.txt
Users/christo/Dropbox/LVS/ws/SandsB2B/tools/pdocs/docs/: replace-hug-with-typer.md
cicd/rc/: handle_exemptions._rc  update_deployments.rc
debug/: main.py
docs/: FRD.md  PRD.md  Raise-test-coverage-to-80-percent.md  TESTS.md  replace-hug-with-typer-plan.md  replace-hug-with-typer.md  test_cli.sh  test_cli_results.md
portray/: api.py  cli.py  config.py  exceptions.py  render.py
scripts/: __init__.py  bumpversion-cfg-application-manifests.py  bumpversion-cfg-deployment-manifests.py  bumpversion.sh  delete-package-versions.sh  expand-manifest.py  extract_profiles_and_accounts.py  github-environments.py  github_workflow_utils.py  jira-component-and-version.py  list_and_download_aws_config_artifacts.sh  profiles_and_accounts.py  repos-and-branches.py  sync-environment-branches.py  sync-main-to-environment-branches.py  template-defaults.py  test.sh  test_cli_py.py  translate.js
scripts/template_defaults/: __init__.py  _main.py  _options.py  config.py  constants.py  exceptions.py  utils.py
tests/: test_config.py
