[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
  "setuptools>=42",
]

[tool.poetry]
name = "portray"
version = "1.9.0"
description = "Your Project with Great Documentation"
authors = [
    "Timothy Crosley <timothy.crosley@gmail.com>",
]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]
keywords = [ "gitops","devops",]
include = [
    "*.cfg",
    "*.json",
    "*.yaml",
]
exclude = [
    ".bumpversion.cfg",
]
packages = [
        { include = "portray" }
]
package-mode = true

[tool.poetry.scripts]
portray = "portray.cli:app"

[tool.poetry.urls]
Homepage = "https://github.com/SandsB2B/portray"
Documentation = "https://portray.docs.infra-area2.com/"
Changelog = "https://github.com/SandsB2B/portray/blob/main/CHANGELOG.md"

[[tool.poetry.source]]
name = "codeartifact"
url = "https://artifacts-433714148419.d.codeartifact.us-east-2.amazonaws.com/pypi/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.12.7,<3.13.0"
mkdocs-material = { version = ">=8.5.0,<9.0.0" }
typer = "~0.16.0"
pdocs = { git = "https://github.com/christokur/pdocs.git", branch = "master" }
toml = ">=0.10.0"
GitPython = ">=3.0"
pymdown-extensions = ">=7.0"
yaspin = ">=0.15.0,<3"
livereload = ">=2.6.3"

[tool.poetry.group.dev.dependencies]
invoke = "~2.2.0"
pip = "~=25.1.1"
# tox_enable: 'False'
black = { version = '~=25.1.0', extras = ['d'] }
commitizen = { version = '~2.42.1' }


isort = { version = '~5.13.2' }
packaging = { version = '~=24.2', python = '>=3.12' }
poethepoet = "~0.32.0"
poetry = "~1.8.5"
pre-commit = { version = '~2.21.0' }
prompt-toolkit = "~3.0.38"
pyproject-fmt = { version = '~1.8.0' }

ruff = ">=0.8.5"
semver = ">=3.0.0,<4.0.0"
setuptools = { version = '>=75.6.0', python = '>=3.12'}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = { version = '~7.3.2', extras = ['toml'] }
mock = ">=1.3.0"
pytest = "~7.4.2"
pytest-cov = "~4.1.0"
pytest-datadir = "~1.5.0"
pytest-mock = "~3.11.1"
pytest-stub = "~1.1.0"

[tool.poetry.group.local-dev]
optional = true

[tool.poetry.group.local-dev.dependencies]
bump2version = "~1.0.4.post1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mdx-include = { version = ">=1.4.1,<2.0.0" }
mkdocs-markdownextradata-plugin = { version = ">=0.1.7,<0.3.0" }
mkdocs-simple-hooks = { version = "~0.1.5" }
pydocstyle = { version = "~6.1.1", extras = ["toml"] }
# end poetry

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
# 'force-exclude' excludes files or directories in addition to the defaults
force-exclude = '(^/.github/*, ^/.vscode/*, .*\.tf)'
# extend-exclude: keep excluding files from .gitignore in addition to the ones specified
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/tests/modules/malformed/.*
  | ^/tests/onpath/malformed_syntax.py
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
 # end of black_extend_exclude'''
skip-string-normalization = true

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".idea",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = [
    "tests/onpath/malformed_syntax.py",
    "debug",
    "tests",
    "tests/modules/malformed",
]
# Group violations by containing file.
output-format = "pylint"
# Same as Black.
line-length = 120
# By default, always enumerate fixed violations.
show-fixes = true
# By default, always show source code snippets.
# show-source = false
# Allow imports relative to the "src" and "test" directories.
src = ["portray", ]
target-version = "py311"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE", "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TCH", "TID", "TRY", "UP", "W", "YTT"]
ignore = [ "ANN002", "ANN003", "D211", "D213", "S101", "T20", "EM101", "EM102", "ERA001", "D417", "BLE001", "RET504", "UP038", "D212", "D407", "D205", "D301", "E501", "D406", "D203", "D413", "SIM910", "N999", "EXE001" ]
per-file-ignores = {}
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# "FBT", "TRY",
select = ["E","F","B","N","I",]
task-tags = ["TODO", "FIXME"]
unfixable = []

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10

[tool.isort]
profile = "black"
skip_gitignore = true
src_paths = [ "", "tests",  ]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.pytest.ini_options]
testpaths = [ "", "tests",  ]
addopts = [""]
norecursedirs = [
    "build",
    "dist",
]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.coverage.run]
command_line = "-m pytest "
source = [ "tests",]
parallel = true
branch = true # measure branch coverage in addition to statement coverage
data_file = "coverage/.coverage"
omit = [
]

[tool.coverage.report]
fail_under = 80

[tool.coverage.paths__]
source = [
    "portray",
    "**/site-packages/portray",
]
omit = [
]

[tool.poetry_bump2version.options]
list = true
allow_dirty = true
tag = true
commit = true
verbose = 1

[tool.pydocstyle]
convention = "google"
add_select = "D401,D404"

[tool.poe.env]
PYTHONWARNINGS = "ignore::Warning:setuptools.command.install"

[tool.poe.tasks]
pyproject-fmt = { shell = "pyproject-fmt pyproject.toml" }
check-lock = { shell = "poetry check --lock | grep -v 'not consistent'", help = "poetry lock workaround for https://github.com/nat-n/poethepoet/issues/91" }
set-lock = { shell = "poetry lock --no-update", help = "Locks the project dependencies in poetry.lock" }
pc-install = { shell = "pre-commit install; gitlint install-hook", help = "Set up commit-msg and pre-commit hooks" }
pc-autoupdate = { shell = "pre-commit autoupdate", help = "Auto update pre-commit hooks" }
pc-reinstall = { shell = "pre-commit uninstall; gitlint uninstall-hook; pre-commit install; pre-commit gc; gitlint install-hook", help = "Reset commit-msg and pre-commit hooks" }
pc-uninstall = { shell = "pre-commit uninstall; gitlint uninstall-hook", help = "Uninstall commit-msg and pre-commit hooks" }
hooks = { shell = "git add -A; pre-commit run", help = "Run pre-commit hooks" }
isort = { shell = "[ -z 'portray' ] || { export PYTHONWARNINGS='ignore::Warning:setuptools.command.install'; isort portray ; }", help = "isort imports in  and tests" }
black = { shell = "[ -z 'portray' ] || { black portray ; }", help = "black formatting in  and tests" }
tests = { shell = "[ -z 'testsportray' ] || { poetry run pytest -s  tests portray; }", help = "pytest's" }
pros = { shell = "prospector --profile prospector.yaml", help = "Prospector" }
b2v = { cmd = "bump2version patch --new-version '${version}' --allow-dirty --commit", args = [{ name = "version", positional = true, multiple = false }], help = "Prospector" }
gcl = { shell = "cz changelog --incremental || { echo 'With incremental changelog we are ok when there is nothing new to add ...'; true; }; python scripts/normalize_changelog.py", help = "Git Changelog" }
gl = { shell = "gitlint", help = "Gitlint last commit" }
format = { shell = "black --check --diff ." }
add = { shell = "git add -A" }
ibtl = { sequence = ["isort", "black", "tests", "lint"] }
doctests = { shell = "[ -z 'portray' ] || { poetry run pytest  --verbose portray }", help = "doctest's" }
deps = { shell = "bash -c 'poetry env info; poetry install --with local-dev,test,docs'", help = "Install project dependencies" }
prepare = { sequence = ["locks", "deps", "formats", "tests", "gcl", "docs-make", "add", "hooks"], help = "Do things to prepare for release" }
docs-make = { shell = "make docs || true" }
docs-build = { shell = "[ -z 'portraysite' ] || { rm -fr site || true; poetry run portray as_html; }" }
docs-serve = { shell = "[ -z 'portraysite' ] || { rm -fr site || true; poetry run portray in_browser --reload; }" }
pu = { shell = "poetry update", help = "Poetry update" }
pule = { sequence = ["pu", "locks", "exports"], help = "Poetry update and exports" }
exports = { sequence = ["export", "export-dev"], help = "Do things to export" }
formats = { sequence = ["isort", "black"], help = "Run checks" }
locks = { sequence = ["set-lock", "check-lock"], help = "Manage poetry.lock" }
ruff =       { shell = "[ -z 'portray' ] || { poe formats; ruff check         portray ; }", help = "Ruff linter" }
ruff-noqa  = { shell = "[ -z 'portray' ] || { ruff check --select RUF --fix   portray ; }", help = "Ruff linter fix noqa" }
ruff-watch = { shell = "[ -z 'portray' ] || { poe formats; ruff check --watch portray ; }", help = "Ruff linter in watch mode" }
ruff-fix =   { shell = "[ -z 'portray' ] || { ruff check --fix-only           portray ; }", help = "Ruff linter fixes" }
tflint = { shell = "env bash bin/run-tflint.sh", help = "Terraform linter" }
tffmt = { shell = "terraform fmt -list=true -recursive -write=true", help = "Terraform formatting" }
cruft = { shell = "git add -A ; poe cruft-checkout :latest:; git status ", help = "Update cruft to latest with override" }
crufto = { shell = "git add -A ; poe cruft-checkout-override :latest:; git status ", help = "Update cruft to latest with override" }
cruftno = { shell = "git add -A ; poe cruft-checkout :latest:; git status ", help = "Update cruft to latest" }
cruft-chore = { shell = "git add -A ; git commit -m 'chore: cruft update'; [ ! -f VERSION ] || { cat VERSION; git tag --force $(cat VERSION); }; [ 0 -ne $? ] || { git push; git push --tags --force; }", help = "Commit cruft updates" }
cruft-latest = { shell = "poe cruft-checkout :latest: ", help = "Update cruft to latest" }
cruft-all = { sequence = ["cruft", "cruft-chore"], help = "Update cruft stuff in one go." }

[tool.poe.tasks.cruft-checkout-override]
shell = "poetry run cruft update --force --strict --override --allow-modified-files --checkout ${checkout}"
help = "Run cruft update"
args = [
    { name = "checkout", positional=true, help = "Tag to check out", required = true, multiple = false },
]
[tool.poe.tasks.cruft-checkout]
shell = "poetry run cruft update --force --strict --no-override --allow-modified-files --checkout ${checkout}"
help = "Run cruft update"
args = [
    { name = "checkout", positional=true, help = "Tag to check out", required = true, multiple = false },
]

[tool.poe.tasks.lint]
shell = """
[ -z 'portray' ] || {
python -m black --check portray ;
python -m isort --check-only portray ;
ruff check portray ;
}
"""
help = "Do a few lint checks"

[tool.poe.tasks.test-cov]
shell = """
[ -z 'testsportray' ] || {
    coverage run -m pytest  tests portray;
    [ 0 -eq $? ] || { echo 'Tests failed'; exit 1;
};
coverage combine;
coverage html -d coverage;
coverage report --show-missing ;
}
"""
help = "Check test coverage"

[tool.poe.tasks.export-dev]
shell = """
export PYTHONWARNINGS=ignore::Warning:setuptools.command.install
python3 -m poetry export --without-hashes --with dev -f requirements.txt -o requirements-dev.txt
"""
help = "Export poetry deps to requirements-dev.txt"
interpreter = "bash"

[tool.poe.tasks.export]
shell = """
export PYTHONWARNINGS=ignore::Warning:setuptools.command.install
python3 -m poetry export --without-hashes -f requirements.txt -o requirements.txt
"""
help = "Export poetry deps to requirements.txt"
env = { "PYTHONWARNINGS" = "ignore::Warning:setuptools.command.install" }
interpreter = "bash"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.9.0"
version_files = [
    ".bumpversion.cfg",
    "VERSION",
    "pyproject.toml:version",
]
tag_format = "v$version"
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.portray]
docs_dir = "docs"
output_dir = "site"
modules = ["portray"]
port = 8000
append_directory_to_python_path = true
include_reference_documentation = true
extra_markdown_extensions = ["admonition", "codehilite", "extra"]

[tool.portray.pdocs]

[tool.portray.mkdocs]
site_name = "Python Docs"
site_description = "A simple program and library to auto generate API documentation for Python modules."
site_url = "https://portray.docs.infra-area2.com/"
repo_url = "https://github.com/SandsB2B/portray"
edit_uri = "edit/master"
copyright = "(c) 2022 Las Vegas Sands"

extra = { generator = false }
extra_css = ["/docs/css/termynal.css", "/docs/css/custom.css"]
extra_javascript = ["/docs/js/termynal.js", "/docs/js/custom.js"]
strict = false
#hooks = [ "docs/hooks/clusters_hook.py" ] [2023-01-26 Christo] Requires 1.4.x

#[tool.portray.mkdocs.plugins]
#"mkdocs-simple-hooks" = { hooks = { "on_config" = "docs.hooks.clusters:on_config" } }

[tool.portray.mkdocs.theme]
favicon = "art/logo.png"
logo = "art/logo.png"
name = "material"

[[tool.portray.mkdocs.theme.palette]]
media = "(prefers-color-scheme: light)"
scheme = "default"
primary = "cyan"
accent = "pink"
toggle = { icon = "material/lightbulb", name = "Switch to light mode" }

[[tool.portray.mkdocs.theme.palette]]
media = "(prefers-color-scheme: dark)"
scheme = "slate"
primary = "deep_purple"
accent = "yellow"
toggle = { icon = "material/lightbulb-outline", name = "Switch to dark mode" }

[tool.cruft]
# NOTE: Putting these here for real will work with cruft BUT it will require TWO cruft runs to take effect.
#skip= [".bumpversion.cfg","CODEOWNERS","docs/TODO.md","README.md","Makefile",".pre-commit-config.yaml",".gitignore","tests/test_dummy.py",".github/workflows/build-test-publish.yml","tests/test_nothing.py","CHANGELOG.md","debug/interpolate.py","debug/poetry_exe.py",".github/workflows/build-test-publish.yml","poetry.lock",".gitignore","RULES.md","TESTS.md","docs","src","portray*","art","LICENSE",".windsurfrules","scripts/clean.sh","scripts/lint.sh","scripts/test.sh","scripts/test_cli_py.py","firebender.json",".github/workflows/mkdocs-gh-pages.yml",".gitlint",".gitownrc",".tflint.hcl",".tflint.ignore","TROUBLESHOOTING.md",]
